test/corpus/quoting.txt
================================================================================
inline quote
================================================================================
`Foo'

--------------------------------------------------------------------------------

(source
  (inline_quote
    (quote_marker)
    (quote_content)
    (quote_marker)))

================================================================================
inline quote across lines
================================================================================
`{ok,
result}'

--------------------------------------------------------------------------------

(source
  (inline_quote
    (quote_marker)
    (quote_content)
    (quote_marker)))

================================================================================
inline quotes overlapping with word tokens
================================================================================
(`create', `update', and `delete')

--------------------------------------------------------------------------------

(source
  (inline_quote
    (quote_marker)
    (quote_content)
    (quote_marker))
  (inline_quote
    (quote_marker)
    (quote_content)
    (quote_marker))
  (inline_quote
    (quote_marker)
    (quote_content)
    (quote_marker)))

================================================================================
double inline-quote
================================================================================
`` 'foo@erlang.org' ''

--------------------------------------------------------------------------------

(source
  (inline_quote
    (quote_marker)
    (quote_content)
    (quote_marker)))

================================================================================
inline quote block
================================================================================
```Foo'''

--------------------------------------------------------------------------------

(source
  (block_quote
    (quote_marker)
    (quote_content)
    (quote_marker)))

================================================================================
multiline quote block
================================================================================
```
case X of
    {ok, Val} -> Val;
    error     -> Default
end
'''

--------------------------------------------------------------------------------

(source
  (block_quote
    (quote_marker)
    (quote_content)
    (quote_marker)))

================================================================================
quote block with language identifier
================================================================================
```none
+-+-+-+-+-+-+ foo +-+-+-+-+-+-+
'''

--------------------------------------------------------------------------------

(source
  (block_quote
    (quote_marker)
    (language_identifier)
    (quote_content)
    (quote_marker)))
